fixed output overflow

--- a/style.css
+++ b/style.css
@@ -85,17 +85,25 @@ a:hover {
 
 #stats-div {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 #stats-div p {
-  margin: 15px 0 15px 10px;
+  margin: 0;
 }
 
 #stats-div output {
-  margin: 15px 0 15px 3px;
-  width: 20px;
+  margin: 0;
+  font-weight: bold;
+  margin: 5px 0;
+  font-size: 1.2em;
+}
+
+.games-stat-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .image-div {
